--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -16,69 +16,61 @@
  */
 
 ext {
-  libraries = [:]
-  versions = [:]
+    libraries = [:]
+    versions = [:]
 }
 
 versions.guava = '18.0'
-versions.spock = '0.7-groovy-2.0'
-versions.springboot = '1.1.9.RELEASE'
+versions.spock = '1.0-groovy-2.4'
+versions.springboot = '1.2.7.RELEASE'
 
 configurations.all {
-  resolutionStrategy {
-    eachDependency { details ->
-      switch (details.requested.name) {
-        case 'junit':
-        case 'junit-dep':
-          details.useTarget 'junit:junit:4.11'
-          break
-        case 'log4j':
-          details.useTarget "org.slf4j:log4j-over-slf4j:$versions.slf4j"
-          break
-        case 'commons-logging':
-          details.useTarget "org.slf4j:jcl-over-slf4j:$versions.slf4j"
-          break
-        case 'groovy-all':
-          details.useVersion '2.2.2'
-          break
-      }
-      if(details.requested.group == 'org.apache.tomcat.embed') {
-        details.useVersion '8.0.9'
-      }
+    resolutionStrategy {
+        eachDependency { details ->
+            switch (details.requested.name) {
+                case 'junit':
+                case 'junit-dep':
+                    details.useTarget 'junit:junit:4.11'
+                    break
+            }
+            if (details.requested.group == 'org.apache.tomcat.embed') {
+                details.useVersion '8.0.9'
+            }
+        }
+        def isCiServer = System.getenv().containsKey('HUDSON_HOME')
+        if (isCiServer) {
+            cacheChangingModulesFor 0, 'seconds'
+        }
     }
-    def isCiServer = System.getenv().containsKey('HUDSON_HOME')
-    if (isCiServer) {
-      cacheChangingModulesFor 0, 'seconds'
-    }
-  }
 }
 
 
 libraries.guava = [
-    "com.google.guava:guava:$versions.guava",
-    'com.google.code.findbugs:jsr305:3.0.0'
+        "com.google.guava:guava:$versions.guava",
+        'com.google.code.findbugs:jsr305:3.0.1'
 ]
 libraries.netty = [
-    'io.netty:netty-all:4.1.0.Beta3',
-    'org.javassist:javassist:3.18.2-GA',
-    'com.jcraft:jzlib:1.1.3'
+        'io.netty:netty-all:4.1.0.Beta7',
+        'org.javassist:javassist:3.20.0-GA',
+        'com.jcraft:jzlib:1.1.3',
+        'javax.el:javax.el-api:2.2.5'
 ]
 libraries.servletapi = 'javax.servlet:javax.servlet-api:3.1.0'
 
 libraries.springboot = [
-    dependencies.create("org.springframework.boot:spring-boot-starter-web:$versions.springboot") {
-       exclude module: 'spring-boot-starter-tomcat'
-    }
+        dependencies.create("org.springframework.boot:spring-boot-starter-web:$versions.springboot") {
+            exclude module: 'spring-boot-starter-tomcat'
+        }
 ]
 
 libraries.guavatest = "com.google.guava:guava-testlib:$versions.guava"
 libraries.spock = [
-    "org.spockframework:spock-core:$versions.spock",
-    'cglib:cglib-nodep:3.1',
-    'org.objenesis:objenesis:2.1'
+        "org.spockframework:spock-core:$versions.spock",
+        'cglib:cglib-nodep:3.2.0',
+        'org.objenesis:objenesis:2.2'
 ]
 
 libraries.testlibs = [
-    libraries.guavatest,
-    libraries.spock
+        libraries.guavatest,
+        libraries.spock
 ]
